technical post title + hopeful overflow fixes

--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,13 @@
 @layer base {
   html {
     @apply font-sans;
+    overflow-x: hidden;
   }
 
   body {
     @apply bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100;
+    overflow-x: hidden;
+    width: 100%;
   }
 
   h1,
